--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,13 @@ cmake_minimum_required(VERSION 3.22)
 project(figment)
 
 add_subdirectory(engine)
-add_subdirectory(editor)
+#add_subdirectory(editor)
+add_subdirectory(portfolio)
 add_subdirectory(vk-app)
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
-enable_testing()
-find_package(GTest CONFIG REQUIRED)
+#enable_testing()
+#find_package(GTest CONFIG REQUIRED)
 
 #if (NOT EMSCRIPTEN)
 #    include(FetchContent)
