--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,6 @@ cmake_minimum_required(VERSION 3.22)
 project(figment)
 
 add_subdirectory(engine)
-#add_subdirectory(editor)
-add_subdirectory(portfolio)
-add_subdirectory(vk-app)
+add_subdirectory(editor)
+#add_subdirectory(portfolio)
+#add_subdirectory(vk-app)
