Begin separate lib for presenter

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -90,6 +90,7 @@ else ()
             Vulkan::Vulkan
             imgui::imgui
             spdlog::spdlog
+            vk_imgui_presenter
     )
 
     target_include_directories(engine PUBLIC
@@ -108,4 +109,5 @@ else ()
 
     )
     add_subdirectory(test)
+    add_subdirectory(lib/vk_imgui_presenter)
 endif ()
