--- a/engine/lib/vk_imgui_presenter/CMakeLists.txt
+++ b/engine/lib/vk_imgui_presenter/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.12)
 
 project(vk_imgui_presenter)
 
+set(CMAKE_CXX_STANDARD 20)
+
 add_library(${PROJECT_NAME} STATIC)
 
 target_include_directories(${PROJECT_NAME} PUBLIC
