Test presenter lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ project(figment)
 add_subdirectory(engine)
 add_subdirectory(editor)
 #add_subdirectory(portfolio)
-#add_subdirectory(vk-app)
+add_subdirectory(vk-app)
